--- a/e-web/admin/views/user/list.html
+++ b/e-web/admin/views/user/list.html
@@ -19,7 +19,7 @@
 	<script>
 		$(function(){
 			$("#user_list").bootstrapTable({
-				url:"/user/list.do",//数据地址
+				url:"http://localhost:8080/e/user/list",//数据地址
 				striped:true,//是否显示行的间隔
 				pageNumber:1,//初始化加载第几页
 				pagination:true,//是否分页
