--- a/e-web/admin/views/courier/update.html
+++ b/e-web/admin/views/courier/update.html
@@ -57,6 +57,15 @@
 <script src="/qrcode/jquery2.1.4.js"></script>
 <script src="/layer/layer.js"></script>
 <script>
+	var token=window.localStorage.getItem("admin");
+        $.ajaxSetup({ //发送请求前触发
+            contentType:'application/json',
+            dataType:'json',
+            beforeSend: function (xhr) { //可以设置自定义标头
+                console.log("ajax beforesend token:", token)
+                xhr.setRequestHeader('Authorization', "Bearer "+token);
+            }
+        }) 
 	$(".header:eq(1),.content:eq(1)").hide();
 	var userId = null;
 	var oldPhone = null;
@@ -64,20 +73,29 @@
 		$("#find").click(function () {
 			var windowId = layer.load();
 			oldPhone = $("#oldPhone").val();
-			$.getJSON("/courier/find.do",{oldPhone:oldPhone},function (data) {
-				layer.close(windowId);
-				layer.msg(data.result);
-				if (data.status == 0){
-					$(".header:eq(1),.content:eq(1)").fadeIn(1000);
-					userId = data.data.id;
-					$("input:eq(0)").val(oldPhone);
-					$("input:eq(1)").val(data.data.userName);
-					$("input:eq(2)").val(data.data.userPhone);
-					$("input:eq(3)").val(data.data.cardId);
-					$("input:eq(4)").val(data.data.express_Count);
-					$("input:eq(5)").val(data.data.password);
+			$.ajax({
+				type:'post',
+				url:"http://localhost:8080/e/courier/findCourierByUserPhone",
+				contentType:'application/json',
+				data:oldPhone,
+				success:function(data){
+					layer.close(windowId);
+					
+					if (data.code == 200){
+						layer.msg(data.msg);
+						$(".header:eq(1),.content:eq(1)").fadeIn(1000);
+						userId = data.data.id;
+						$("input:eq(0)").val(oldPhone);
+						$("input:eq(1)").val(data.data.userName);
+						$("input:eq(2)").val(data.data.userPhone);
+						$("input:eq(3)").val(data.data.cardId);
+						$("input:eq(4)").val(data.data.expressCount);
+						$("input:eq(5)").val(data.data.password);
+					}else{
+						layer.msg(data.data);
+					}
 				}
-			});
+			})
 		});
 	});
 
@@ -89,22 +107,28 @@
 		var express_Count = $("input:eq(4)").val();
 		var password = $("input:eq(5)").val();
 		//手机号如果未改动，则不传递手机号（dao的设计问题）
-		$.getJSON("/courier/update.do", {
+		var newCourier = {
 			id:userId,
-			oldPhone:oldPhone,
 			userName:userName,
 			userPhone:userPhone,
 			password:password,
 			cardId:cardId,
-			express_Count:express_Count
-		},function (data) {
-			layer.close(windowId);
-			layer.msg(data.result);
-			if (data.status==0){
-				//修改成功
-				$(".header:eq(1),.content:eq(1)").hide();
-			}
-		});
+			expressCount:express_Count
+		}
+		$.ajax({
+				type:'put',
+				url:"http://localhost:8080/e/courier/updateCourier",
+				contentType:'application/json',
+				data:JSON.stringify(newCourier),
+				success:function(data){
+					layer.close(windowId);
+					if (data){
+						layer.msg("修改成功！");
+						//修改成功
+						$(".header:eq(1),.content:eq(1)").hide();
+					}
+				}
+			})
 	});
 </script>
 </html>
